--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -51,28 +51,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feels like" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXq-P4-JuA">
-                                <rect key="frame" x="392" y="232" width="180" height="14.5"/>
+                                <rect key="frame" x="392" y="232" width="180" height="15"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Compass" translatesAutoresizingMaskIntoConstraints="NO" id="JjI-yg-iXd">
-                                <rect key="frame" x="196" y="371" width="208" height="208"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="JjI-yg-iXd" secondAttribute="height" multiplier="1:1" id="vxr-XW-v1c"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Condition" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tH5-Tj-U82">
-                                <rect key="frame" x="20" y="158" width="240" height="32.5"/>
+                                <rect key="frame" x="20" y="158" width="240" height="33"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Wind" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1q-Tm-4NS">
-                                <rect key="frame" x="180" y="319" width="240" height="32.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1q-Tm-4NS">
+                                <rect key="frame" x="150" y="360" width="300" height="33"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -81,24 +74,20 @@
                                     <rect key="frame" x="20" y="183" width="240" height="32.5"/>
                                 </variation>
                             </label>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LSL-Ka-mqf" userLabel="Empty Detail View">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose suburb :)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yja-88-VWR">
-                                        <rect key="frame" x="199" y="284.5" width="202" height="32.5"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="DIR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOF-HT-xV0">
+                                <rect key="frame" x="150" y="435" width="42" height="33"/>
                                 <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="yja-88-VWR" firstAttribute="centerY" secondItem="LSL-Ka-mqf" secondAttribute="centerY" id="Exz-B5-i0X"/>
-                                    <constraint firstItem="yja-88-VWR" firstAttribute="centerX" secondItem="LSL-Ka-mqf" secondAttribute="centerX" id="PPB-Ck-8Wx"/>
-                                </constraints>
-                            </view>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="SP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUL-pX-B8r">
+                                <rect key="frame" x="209" y="441" width="42" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.86363636359999996" green="0.86363636359999996" blue="0.86363636359999996" alpha="1" colorSpace="calibratedRGB"/>
@@ -107,44 +96,29 @@
                             <constraint firstAttribute="leadingMargin" secondItem="tH5-Tj-U82" secondAttribute="leading" id="8XM-8a-9Aq"/>
                             <constraint firstItem="xXq-P4-JuA" firstAttribute="top" secondItem="Jri-Z3-dll" secondAttribute="bottom" constant="8" id="917-tk-lTs"/>
                             <constraint firstItem="tH5-Tj-U82" firstAttribute="centerY" secondItem="Jri-Z3-dll" secondAttribute="centerY" id="BG4-du-YIe"/>
-                            <constraint firstItem="JjI-yg-iXd" firstAttribute="height" secondItem="svH-Pt-448" secondAttribute="height" multiplier="0.36" id="GW8-A1-dii"/>
+                            <constraint firstItem="C1q-Tm-4NS" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" multiplier="0.5" id="BSb-NR-ctj"/>
+                            <constraint firstItem="C1q-Tm-4NS" firstAttribute="top" secondItem="tH5-Tj-U82" secondAttribute="bottom" constant="169.5" id="Ju0-Xz-NOL"/>
+                            <constraint firstItem="PUL-pX-B8r" firstAttribute="centerY" secondItem="jOF-HT-xV0" secondAttribute="centerY" id="L12-fH-334"/>
                             <constraint firstItem="Jri-Z3-dll" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="60" id="Lh4-Li-XQU"/>
-                            <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" secondItem="JjI-yg-iXd" secondAttribute="bottom" constant="21" id="Llg-e0-66v"/>
-                            <constraint firstItem="LSL-Ka-mqf" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" id="NT4-QZ-LG4"/>
-                            <constraint firstItem="LSL-Ka-mqf" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="NX9-ni-MDc"/>
-                            <constraint firstItem="JjI-yg-iXd" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="VvI-zS-VyG"/>
                             <constraint firstItem="tH5-Tj-U82" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" multiplier="0.4" id="WAd-Vj-3ws"/>
-                            <constraint firstItem="LSL-Ka-mqf" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" id="gp2-qH-b6x"/>
-                            <constraint firstItem="JjI-yg-iXd" firstAttribute="width" relation="lessThanOrEqual" secondItem="svH-Pt-448" secondAttribute="width" multiplier="0.36" id="kFt-RD-eLw"/>
+                            <constraint firstItem="jOF-HT-xV0" firstAttribute="top" secondItem="C1q-Tm-4NS" secondAttribute="bottom" constant="42.5" id="fpr-bx-IWq"/>
+                            <constraint firstItem="C1q-Tm-4NS" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="jRj-JS-Xma"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xXq-P4-JuA" secondAttribute="trailing" constant="8" id="l7g-hL-BK4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Jri-Z3-dll" secondAttribute="trailing" constant="8" id="mez-c3-qCV"/>
-                            <constraint firstItem="LSL-Ka-mqf" firstAttribute="centerY" secondItem="svH-Pt-448" secondAttribute="centerY" id="oG2-MO-fRS"/>
                             <constraint firstItem="xXq-P4-JuA" firstAttribute="width" secondItem="Jri-Z3-dll" secondAttribute="width" id="ozn-Cj-Mfc"/>
-                            <constraint firstItem="LSL-Ka-mqf" firstAttribute="height" secondItem="svH-Pt-448" secondAttribute="height" id="y9H-Z7-Dck"/>
-                            <constraint firstItem="LSL-Ka-mqf" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" id="zZU-WT-npB"/>
+                            <constraint firstItem="jOF-HT-xV0" firstAttribute="leading" secondItem="C1q-Tm-4NS" secondAttribute="leading" id="qYq-iP-5yY"/>
+                            <constraint firstItem="PUL-pX-B8r" firstAttribute="leading" secondItem="jOF-HT-xV0" secondAttribute="trailing" constant="17" id="yfk-KS-f0K"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="NT4-QZ-LG4"/>
-                                <exclude reference="zZU-WT-npB"/>
-                                <exclude reference="GW8-A1-dii"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=compact">
-                            <mask key="constraints">
-                                <include reference="GW8-A1-dii"/>
-                                <exclude reference="kFt-RD-eLw"/>
-                            </mask>
-                        </variation>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Weather" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="conditionLabel" destination="tH5-Tj-U82" id="3hu-Sq-B1D"/>
                         <outlet property="feelsLikeLabel" destination="xXq-P4-JuA" id="xdN-63-XDF"/>
-                        <outlet property="placeholderView" destination="LSL-Ka-mqf" id="aYj-7L-V8b"/>
                         <outlet property="temperatureLabel" destination="Jri-Z3-dll" id="fNc-O7-BAE"/>
+                        <outlet property="windDirectionLabel" destination="jOF-HT-xV0" id="1jf-67-f0T"/>
                         <outlet property="windLabel" destination="C1q-Tm-4NS" id="ylR-yc-W0Y"/>
+                        <outlet property="windSpeedLabel" destination="PUL-pX-B8r" id="jEd-bK-y1X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
@@ -179,7 +153,7 @@
                                 <rect key="frame" x="0.0" y="86" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WCw-Qf-5nD" id="37f-cq-3Eg">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Suburbs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xo4-9X-dju">
@@ -190,14 +164,14 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last updated" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kne-pG-OZ2">
-                                            <rect key="frame" x="142" y="29.5" width="450" height="13.5"/>
+                                            <rect key="frame" x="142" y="30" width="450" height="13"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czp-rs-pnB">
-                                            <rect key="frame" x="581.5" y="7" width="10.5" height="21"/>
+                                            <rect key="frame" x="582" y="7" width="10" height="21"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -287,7 +261,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Compass" width="208" height="208"/>
         <image name="sort" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
